Add package.json for Render deploy

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -194,7 +194,7 @@
   <a href="#" id="helloBtn" data-desc="*こんにちは">Hello</a>
   <a href="/temp" data-desc="*仮">kari</a>
   <a href="#" id="doubleBtn" data-desc="*心理ゲーム-DOUBLE MINE-">DOUBLE MINE</a>
-  <a href="/login" data-desc="*アーカイブ">Archive</a>
+  <a href="/register" data-desc="*アーカイブ">Archive</a>
   <a href="/other" data-desc="*その他">other</a>
 
 </div>
