Add package.json for Render deploy

--- a/app/templates/game1.html
+++ b/app/templates/game1.html
@@ -36,7 +36,7 @@
     const resultDiv = document.getElementById("result");
 
     let isLeader = false;
-    let currentPassword = localStorage.getItem("password");
+    let currentPassword = localStorage.getItem("gamePassword");
     let selectedCards = [];
     let cardNumbers = [];
     //let currentPassword = localStorage.getItem("password");
