Add package.json for Render deploy

--- a/app/templates/game1.html
+++ b/app/templates/game1.html
@@ -41,7 +41,7 @@
     let cardNumbers = [];
     let round = 1;
     let myScore = 0;
-    let opponenScore = 0;
+    let opponentScore = 0;
 
     const scoreDiv = document.createElement("div");
     scoreDiv.id = "scoreDiv";
