--- a/app/templates/game1.html
+++ b/app/templates/game1.html
@@ -150,42 +150,7 @@
       }
       submitBtn.disabled = true;
     });
-    
-    /*
-    socket.on("round_result", (data) => {
-      const { parent_choice, child_choice, score_child } = data;
-      resultDiv.innerHTML = `
-        <p>防衛側の選んだカード: ${parent_choice.join(", ")}</p>
-        <p>攻撃側の選んだカード: ${child_choice.join(", ")}</p>
-        <p>攻撃側の得点: ${score_child}</p>
-      `;
 
-      // スコア更新
-      if (isLeader) {
-        opponentScore += score_child;
-      } else {
-        myScore += score_child;
-      }
-
-      updateScoreboard();
-
-      // 次へボタンを追加
-      const nextBtn = document.createElement("button");
-      nextBtn.textContent = "次のラウンドへ ▶";
-      nextBtn.id = "nextBtn";
-      document.body.appendChild(nextBtn);
-
-      nextBtn.addEventListener("click", () => {
-        nextBtn.remove();
-        nextRound();
-      });
-
-      console.log("攻撃側の得点", score_child);
-      console.log("防衛側の選択", parent_choice);
-    });
-    */
-
-    //
     socket.on("round_result", (data) => {
       const { parent_choice, child_choice, score_child } = data;
       resultDiv.innerHTML = `
@@ -214,7 +179,7 @@
         document.body.appendChild(nextBtn);
 
         nextBtn.addEventListener("click", () => {
-          socket.emit("start_round", { password: currentPassword });
+          socket.emit("next_round", { password: currentPassword });
           nextBtn.remove();
           resultDiv.innerHTML = "";
           round++;
