--- a/app/templates/game1.html
+++ b/app/templates/game1.html
@@ -162,11 +162,29 @@
       console.log("攻撃側の得点", score_child);
       console.log("防衛側の選択", parent_choice);
 
+      let score_parent = 0;
+      if( score_child === 0){
+        score_parent = 10;
+        resultDiv.innerHTML = `
+        <p>防衛側の選んだカード: ${parent_choice.join(", ")}</p>
+        <p>攻撃側の選んだカード: ${child_choice.join(", ")}</p>
+        <p>攻撃側の得点: ${score_child}</p>
+        <p>防御側ボーナス: ${score_parent}</p>
+      `;
+      }else{
+        resultDiv.innerHTML = `
+        <p>防衛側の選んだカード: ${parent_choice.join(", ")}</p>
+        <p>攻撃側の選んだカード: ${child_choice.join(", ")}</p>
+        <p>攻撃側の得点: ${score_child}</p>
+      `;
+      }
 
-    if (isLeader) {
+      if (isLeader) {
         opponentScore += score_child;
+        myScore += score_parent;
       } else {
         myScore += score_child;
+        opponentScore += score_parent;
       }
 
       updateScoreboard();
