--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -186,6 +186,7 @@
     border-radius: 8px;         /* 角を丸く */
     margin-bottom: 10px;        /* 下のテキストとの余白 */
     border: 2px solid #000;     /* 枠線 */
+    transform: translate(-200%, -100%);
   }
 
   /* GIF画像そのものを綺麗に表示 */
@@ -212,7 +213,7 @@
 
 <div class="green-box">
   <div class="gif-box">
-    <img src="/static/images/sample.gif" alt="サンプルGIF">
+    <img src="images/america.gif" alt="サンプルGIF">
   </div>
 </div>
 <div class="container">
