Add package.json for Render deploy

--- a/app/templates/game1.html
+++ b/app/templates/game1.html
@@ -134,7 +134,7 @@
           selectedCards.push(num);
           cardEl.classList.add("selected");
           // 画像をセット
-          imgEl.src = isLeader ? "images/thunder.png" : "images/human.png";
+          imgEl.src = isLeader ? "/static/images/thunder.png" : "/static/images/human.png";
         }
       }
       submitBtn.disabled = (selectedCards.length !== 2);
