--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -189,6 +189,17 @@
     transform: translate(-200%, -100%);
   }
 
+  .gif-box2 {
+    position: relative;
+    width: 100%;
+    height: 120px;              /* 高さは自由に調整可能 */
+    overflow: hidden;           /* はみ出しを非表示 */
+    border-radius: 8px;         /* 角を丸く */
+    margin-bottom: 10px;        /* 下のテキストとの余白 */
+    border: 2px solid #000;     /* 枠線 */
+    transform: translate(-150%, -70%);
+  }
+
   /* GIF画像そのものを綺麗に表示 */
   .gif-box img {
     width: 100%;
@@ -213,7 +224,12 @@
 
 <div class="green-box">
   <div class="gif-box">
-    <img src="images/america.gif" alt="サンプルGIF">
+    <img src="/static/images/america.gif" alt="サンプルGIF">
+  </div>
+</div>
+<div class="green-box2">
+  <div class="gif-box">
+    <img src="/static/images/america2.gif" alt="サンプルGIF">
   </div>
 </div>
 <div class="container">
