--- a/app/templates/game1.html
+++ b/app/templates/game1.html
@@ -109,15 +109,21 @@
         div.classList.add("card");
         div.textContent = num;
 
+        div.style.position = "relative"; // overlay の基準
+
+         // オーバーレイ画像を作成（初期は非表示）
         const img = document.createElement("img");
         img.style.position = "absolute";
-        img.style.top = "0";
-        img.style.left = "0";
-        img.style.width = "100%";
-        img.style.height = "100%";
-        img.style.opacity = "0.5"; // 半透明
+        img.style.top = "50%";
+        img.style.left = "50%";
+        img.style.width = "50%";       // カードサイズの半分
+        img.style.height = "auto";
+        img.style.transform = "translate(-50%, -50%)"; // 中央に配置
+        img.style.opacity = "0.7";     // 半透明
         img.style.pointerEvents = "none"; // クリックを妨げない
+        img.src = ""; // 初期は空
         div.appendChild(img);
+
         div.addEventListener("click", () => toggleSelect(div, num, img));
         cardsDiv.appendChild(div);
       });
