--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -208,6 +208,13 @@
     border-radius: 8px;
       display: block;
   }
+  .gif-box2 img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;          /* 枠にフィットさせてトリミング */
+    border-radius: 8px;
+      display: block;
+  }
   </style>
 
 <div class="main-text">
@@ -228,8 +235,8 @@
   </div>
 </div>
 <div class="green-box2">
-  <div class="gif-box">
-    <img src="/static/images/america2.gif" alt="サンプルGIF">
+  <div class="gif-box2">
+    <img src="/static/images/america2.gif" alt="サンプルGIF2">
   </div>
 </div>
 <div class="container">
