--- a/app/templates/game1.html
+++ b/app/templates/game1.html
@@ -198,7 +198,7 @@
       cardsContainer.style.gap = "10px";
       cardsContainer.style.flexWrap = "wrap";
       resultDiv.appendChild(cardsContainer);
-      
+      cardsDiv.innerHTML = "";
       round_cards.forEach(num => {
         const div = document.createElement("div");
         div.classList.add("card");
@@ -267,7 +267,7 @@
         <p>攻撃側の得点: ${score_child}</p>
       `;
       }
-      
+
       if (isLeader) {
         opponentScore += score_child;
         myScore += score_parent;
