Add package.json for Render deploy

--- a/app/templates/game1.html
+++ b/app/templates/game1.html
@@ -198,7 +198,8 @@
       cardsContainer.style.gap = "10px";
       cardsContainer.style.flexWrap = "wrap";
       resultDiv.appendChild(cardsContainer);
-      cardsDiv.innerHTML = "";
+      //cardsDiv.innerHTML = "";
+
       round_cards.forEach(num => {
         const div = document.createElement("div");
         div.classList.add("card");
