--- a/app/templates/game1.html
+++ b/app/templates/game1.html
@@ -189,6 +189,7 @@
     socket.on("round_result", (data) => {
       const { parent_choice, child_choice, score_child, round_cards } = data;
       
+      resultDiv.innerHTML = "";
 
       // カードコンテナを先に作成して append
       const cardsContainer = document.createElement("div");
@@ -242,12 +243,7 @@
 
         cardsContainer.appendChild(div);
       });
-
-      resultDiv.innerHTML = `
-        <p>防衛側の選んだカード: ${parent_choice.join(", ")}</p>
-        <p>攻撃側の選んだカード: ${child_choice.join(", ")}</p>
-        <p>攻撃側の得点: ${score_child}</p>
-      `;
+      const resultText = document.createElement("div");
 
       console.log("攻撃側の得点", score_child);
       console.log("防衛側の選択", parent_choice);
@@ -255,19 +251,23 @@
       let score_parent = 0; 
       if( score_child === 0){
         score_parent = 10;
-        resultDiv.innerHTML = `
+        resultText.innerHTML = `
         <p>防衛側の選んだカード: ${parent_choice.join(", ")}</p>
         <p>攻撃側の選んだカード: ${child_choice.join(", ")}</p>
         <p>攻撃側の得点: ${score_child}</p>
         <p>防御側ボーナス: ${score_parent}</p>
       `;
       }else{
-        resultDiv.innerHTML = `
+        resultText.innerHTML = `
         <p>防衛側の選んだカード: ${parent_choice.join(", ")}</p>
         <p>攻撃側の選んだカード: ${child_choice.join(", ")}</p>
         <p>攻撃側の得点: ${score_child}</p>
       `;
       }
+      resultText.style.textAlign = "center";
+      resultText.style.marginTop = "10px";
+
+      resultDiv.appendChild(resultText);
 
       if (isLeader) {
         opponentScore += score_child;
