--- a/app/templates/game1.html
+++ b/app/templates/game1.html
@@ -29,7 +29,9 @@
 
 
   <script>
-    const socket = io();
+    const socket = io("https://html-mq6q.onrender.com", {
+      transports: ["websocket", "polling"],
+    });
     const cardsDiv = document.getElementById("cards");
     const submitBtn = document.getElementById("submitBtn");
     const status = document.getElementById("status");
